added Day 19 notebook, haven't done much with it yet

--- a/Day 19 - A Series of Tubes.ipynb
+++ b/Day 19 - A Series of Tubes.ipynb
@@ -35,16 +35,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'     |          \\n     |  +--+    \\n     A  |  C    \\n F---|----E|--+ \\n     |  |  |  D \\n     +B-+  +--+'"
+       "['|                                                                                                                                                                                                       ',\n",
+       " ' |                                   +---------------------------------------------------------------------------------------------------------------------------------------------------------------+   ',\n",
+       " ' |                                   |                                                                                                                                                               |   ',\n",
+       " ' |     +-------------------------------------------+                                                   +-------------+   +---------------+                     +-------------------------------------+   ',\n",
+       " ' |     |                             |             |                                                   |             |   |               |                     |                                         ',\n",
+       " ' |     +-----------------------------|---------+   |   +-+ +-------+                       +---+       |             |   |   +-----------|-----------------------------------------+   +-----------+     ',\n",
+       " ' |                                   |         |   |   | | |       |                       |   |       |             |   |   |           |                     |                   |   |           |     ',\n",
+       " ' |                                   |         +---|---|---|-------------------------------|---|-------|-------------|---|---------------|---------------------------------------------+           |     ']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# the puzzle input\n",
+    "with open('puzzle_inputs/day19_input.txt') as f:\n",
+    "    data = f.read().strip().split(\"\\n\")\n",
+    "puzzle_input = [line for line in data]\n",
+    "puzzle_input[:8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['     |          ',\n",
+       " '     |  +--+    ',\n",
+       " '     A  |  C    ',\n",
+       " ' F---|----E|--+ ',\n",
+       " '     |  |  |  D ',\n",
+       " '     +B-+  +--+']"
+      ]
+     },
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +91,156 @@
     "     A  |  C    \n",
     " F---|----E|--+ \n",
     "     |  |  |  D \n",
-    "     +B-+  +--+\"\"\""
+    "     +B-+  +--+\"\"\"\n",
+    "test_input = test_input.split(\"\\n\")\n",
+    "test_input"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It starts at the first `|` in the top line:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start index is 5\n",
+      "8\n",
+      "['A']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import string\n",
+    "\n",
+    "letters_seen = []\n",
+    "x = test_input[0].index(\"|\")\n",
+    "print(\"start index is\", x)\n",
+    "\n",
+    "dir = \"DOWN\"\n",
+    "\n",
+    "for i in range(1, len(test_input)):\n",
+    "    line = test_input[i]\n",
+    "    if line[x] in string.ascii_letters:\n",
+    "        letters_seen.append(line[x])\n",
+    "    if line[x] == \"+\":\n",
+    "        # turn left or right\n",
+    "        x = go_horizontal(line, x)\n",
+    "        print(x)\n",
+    "    \n",
+    "print(letters_seen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = '     +B-+  +--+'\n",
+    "x = t.index(\"+\")\n",
+    "print(x, t)\n",
+    "\n",
+    "def go_horizontal(line, x):\n",
+    "    if x == 0:\n",
+    "        go = \"RIGHT\"\n",
+    "    elif line[x-1] != \" \":\n",
+    "        go = \"LEFT\"\n",
+    "    else:\n",
+    "        go = \"RIGHT\"\n",
+    "    \n",
+    "    while line[x] != \"+\":\n",
+    "        print(x, line)\n",
+    "        if go == \"LEFT\":\n",
+    "            x -= 1\n",
+    "        else:\n",
+    "            x += 1\n",
+    "    return x\n",
+    "\n",
+    "go_horizontal(t, x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['|', '|', 'A', '|', '|', '+']"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[row[5] for row in test_input]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 0\n",
+      "['|', '|', 'A', '|', '|', '+']\n",
+      "DOWN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def go_vertical(puzzle, x, y):\n",
+    "    \"\"\"goes vertical, returns y position\"\"\"\n",
+    "    col = [row[x] for row in puzzle]\n",
+    "    print(x, y)\n",
+    "    print(col)\n",
+    "    \n",
+    "    if y == 0:\n",
+    "        go = \"DOWN\"\n",
+    "    elif y == len(puzzle):\n",
+    "        go = \"UP\"\n",
+    "    elif col[y-1] != \" \":\n",
+    "        go = \"UP\"\n",
+    "        y -= 1\n",
+    "    else:\n",
+    "        go=\"DOWN\"\n",
+    "        y += 1\n",
+    "    print(go)    \n",
+    "    \n",
+    "    while col[y] != \"+\":\n",
+    "        if go == \"UP\":\n",
+    "            y -= 1\n",
+    "        else:\n",
+    "            y += 1\n",
+    "    \n",
+    "    return y\n",
+    "\n",
+    "go_vertical(test_input, test_input[0].index(\"|\"), 0)"
    ]
   },
   {
