--- a/Day 19 - A Series of Tubes.ipynb
+++ b/Day 19 - A Series of Tubes.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        " '     +B-+  +--+']"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,17 +104,132 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First up, some helper functions:\n",
+    "\n",
+    "`valid point` to make sure the point is inside the puzzle:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(False, True)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def valid_point(puzzle, point):\n",
+    "    \"\"\"returns true if a given point is valid for a given puzzle graph\"\"\"\n",
+    "    max_val = len(puzzle) - 1\n",
+    "    \n",
+    "    if max(point) <= max_val and min(point) >= 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "valid_point(test_input, (-1,0)), valid_point(test_input, (1,0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Generate list of points to possibly visit from a given point:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 2), (3, 2), (2, 1), (2, 3)]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "points_visited = [(2,2)]\n",
+    "\n",
+    "def points_to_visit(puzzle, cur_pos, points_visited):\n",
+    "    x,y = cur_pos\n",
+    "    visit = []\n",
+    "    for i in range(x-1, x+2):\n",
+    "        p = (i, y)\n",
+    "        if valid_point(puzzle, p) and p not in points_visited:\n",
+    "            visit.append(p)\n",
+    "    for i in range(y-1, y+2):\n",
+    "        p = (x, i)\n",
+    "        if valid_point(puzzle, p) and p not in points_visited:\n",
+    "            visit.append(p)\n",
+    "    \n",
+    "    return visit\n",
+    "\n",
+    "points_to_visit(test_input, (2,2), points_visited)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'|'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = (5,0)\n",
+    "\n",
+    "def get_val(p, puzzle):\n",
+    "    return puzzle[p[1]][p[0]]\n",
+    "get_val(p, test_input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def new_point(p, puzzle, D):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start index is 5\n",
-      "8\n",
-      "['A']\n"
+      "start point is 5 0\n",
+      "[(5, 0)]\n",
+      "[(4, 0), (5, 1)]\n"
      ]
     }
    ],
@@ -123,27 +238,52 @@
     "\n",
     "letters_seen = []\n",
     "x = test_input[0].index(\"|\")\n",
-    "print(\"start index is\", x)\n",
+    "y = 0\n",
+    "DIR = \"D\"\n",
     "\n",
-    "dir = \"DOWN\"\n",
+    "points_visited = [(x,y)]\n",
+    "print(\"start point is\", x,y)\n",
+    "to_visit = points_to_visit(test_input, (x,y), points_visited)\n",
     "\n",
-    "for i in range(1, len(test_input)):\n",
-    "    line = test_input[i]\n",
-    "    if line[x] in string.ascii_letters:\n",
-    "        letters_seen.append(line[x])\n",
-    "    if line[x] == \"+\":\n",
-    "        # turn left or right\n",
-    "        x = go_horizontal(line, x)\n",
-    "        print(x)\n",
-    "    \n",
-    "print(letters_seen)"
+    "print(points_visited)\n",
+    "print(to_visit)\n",
+    "\n",
+    "def solve_puzzle(puzzle, cur_pos):\n",
+    "    while len(to_visit) > 0:\n",
+    "        for p in to_visit:\n",
+    "            val = get_val(p, puzzle)\n",
+    "            if val == \" \":\n",
+    "                continue\n",
+    "            elif val is in \"|-\":\n",
+    "                # continue in same direction\n",
+    "            elif val == \"+\":\n",
+    "                # change direction\n",
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5      +B-+  +--+\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "t = '     +B-+  +--+'\n",
     "x = t.index(\"+\")\n",
@@ -170,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +319,7 @@
        "['|', '|', 'A', '|', '|', '+']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
