finished part 1 and 2

--- a/Day 19 - A Series of Tubes.ipynb
+++ b/Day 19 - A Series of Tubes.ipynb
@@ -35,13 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['|                                                                                                                                                                                                       ',\n",
+       "[' |                                                                                                                                                                                                       ',\n",
        " ' |                                   +---------------------------------------------------------------------------------------------------------------------------------------------------------------+   ',\n",
        " ' |                                   |                                                                                                                                                               |   ',\n",
        " ' |     +-------------------------------------------+                                                   +-------------+   +---------------+                     +-------------------------------------+   ',\n",
@@ -51,7 +51,7 @@
        " ' |                                   |         +---|---|---|-------------------------------|---|-------|-------------|---|---------------|---------------------------------------------+           |     ']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,14 +59,14 @@
    "source": [
     "# the puzzle input\n",
     "with open('puzzle_inputs/day19_input.txt') as f:\n",
-    "    data = f.read().strip().split(\"\\n\")\n",
+    "    data = f.read().split(\"\\n\")\n",
     "puzzle_input = [line for line in data]\n",
     "puzzle_input[:8]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        " '     +B-+  +--+']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,283 +109,202 @@
    "source": [
     "First up, some helper functions:\n",
     "\n",
-    "`valid point` to make sure the point is inside the puzzle:"
+    "`step` takes a step in the given direction and returns the new x,y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(False, True)"
+       "((0, -1), (0, 1), (-1, 0), (1, 0))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def valid_point(puzzle, point):\n",
-    "    \"\"\"returns true if a given point is valid for a given puzzle graph\"\"\"\n",
-    "    max_val = len(puzzle) - 1\n",
-    "    \n",
-    "    if max(point) <= max_val and min(point) >= 0:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False\n",
+    "def step(x, y, direction):\n",
+    "    \"\"\"returns the next point\"\"\"\n",
+    "    if direction == \"UP\": y -= 1\n",
+    "    if direction == \"DOWN\": y += 1\n",
+    "    if direction == \"LEFT\": x -= 1\n",
+    "    if direction == \"RIGHT\": x += 1\n",
+    "    return x, y\n",
     "\n",
-    "valid_point(test_input, (-1,0)), valid_point(test_input, (1,0))"
+    "step(0, 0, \"UP\"), step(0, 0, \"DOWN\"), step(0, 0, \"LEFT\"), step(0, 0, \"RIGHT\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Generate list of points to possibly visit from a given point:"
+    "this gets us the new direction:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1, 2), (3, 2), (2, 1), (2, 3)]"
+       "'DOWN'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "points_visited = [(2,2)]\n",
-    "\n",
-    "def points_to_visit(puzzle, cur_pos, points_visited):\n",
-    "    x,y = cur_pos\n",
-    "    visit = []\n",
-    "    for i in range(x-1, x+2):\n",
-    "        p = (i, y)\n",
-    "        if valid_point(puzzle, p) and p not in points_visited:\n",
-    "            visit.append(p)\n",
-    "    for i in range(y-1, y+2):\n",
-    "        p = (x, i)\n",
-    "        if valid_point(puzzle, p) and p not in points_visited:\n",
-    "            visit.append(p)\n",
+    "def get_direction(x, y, direction, puzzle):\n",
+    "    \"\"\"return the new direction, returns none if fails\"\"\"\n",
     "    \n",
-    "    return visit\n",
+    "    max_x = len(puzzle[0]) -1\n",
+    "    max_y = len(puzzle) - 1\n",
+    "    \n",
+    "    if direction is \"RIGHT\" or direction is \"LEFT\":\n",
+    "        if y > 0:\n",
+    "            val = puzzle[y-1][x]\n",
+    "            if val == \"|\" or val.isalpha():\n",
+    "                return \"UP\" \n",
+    "        \n",
+    "        if y < max_y:\n",
+    "            val = puzzle[y+1][x]\n",
+    "            if val == \"|\" or val.isalpha():\n",
+    "                return \"DOWN\"\n",
+    "        return None\n",
+    "        \n",
+    "    if direction is \"UP\" or direction is \"DOWN\":\n",
+    "        if x+1 < max_x:\n",
+    "            val = puzzle[y][x+1]\n",
+    "            if val == \"-\" or val.isalpha():\n",
+    "                return \"RIGHT\" \n",
+    "        \n",
+    "        if x > 0:\n",
+    "            val = puzzle[y][x-1]\n",
+    "            if val == \"-\" or val.isalpha():\n",
+    "                return \"LEFT\"\n",
+    "    \n",
+    "    return None\n",
     "\n",
-    "points_to_visit(test_input, (2,2), points_visited)"
+    "get_direcion(0,3, \"LEFT\", test_input)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'|'"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "p = (5,0)\n",
-    "\n",
-    "def get_val(p, puzzle):\n",
-    "    return puzzle[p[1]][p[0]]\n",
-    "get_val(p, test_input)"
+    "Now to solve the actual puzzle:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def new_point(p, puzzle, D):\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start point is 5 0\n",
-      "[(5, 0)]\n",
-      "[(4, 0), (5, 1)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import string\n",
-    "\n",
-    "letters_seen = []\n",
-    "x = test_input[0].index(\"|\")\n",
-    "y = 0\n",
-    "DIR = \"D\"\n",
-    "\n",
-    "points_visited = [(x,y)]\n",
-    "print(\"start point is\", x,y)\n",
-    "to_visit = points_to_visit(test_input, (x,y), points_visited)\n",
-    "\n",
-    "print(points_visited)\n",
-    "print(to_visit)\n",
-    "\n",
-    "def solve_puzzle(puzzle, cur_pos):\n",
-    "    while len(to_visit) > 0:\n",
-    "        for p in to_visit:\n",
-    "            val = get_val(p, puzzle)\n",
-    "            if val == \" \":\n",
-    "                continue\n",
-    "            elif val is in \"|-\":\n",
-    "                # continue in same direction\n",
-    "            elif val == \"+\":\n",
-    "                # change direction\n",
-    "            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5      +B-+  +--+\n"
+      "End of the Line\n",
+      "Letters seen:  ABCDEF\n",
+      "Steps taken:  37\n",
+      "Pos: 0 3 LEFT\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "5"
+       "('ABCDEF', 37)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t = '     +B-+  +--+'\n",
-    "x = t.index(\"+\")\n",
-    "print(x, t)\n",
+    "def solve_puzzle(puzzle=test_input):\n",
+    "    letters_seen = []\n",
+    "    x = puzzle[0].index(\"|\")\n",
+    "    y = 0\n",
+    "    direction = \"DOWN\"\n",
     "\n",
-    "def go_horizontal(line, x):\n",
-    "    if x == 0:\n",
-    "        go = \"RIGHT\"\n",
-    "    elif line[x-1] != \" \":\n",
-    "        go = \"LEFT\"\n",
-    "    else:\n",
-    "        go = \"RIGHT\"\n",
-    "    \n",
-    "    while line[x] != \"+\":\n",
-    "        print(x, line)\n",
-    "        if go == \"LEFT\":\n",
-    "            x -= 1\n",
+    "    points_visited = []\n",
+    "\n",
+    "    while direction is not None:\n",
+    "        val = puzzle[y][x]\n",
+    "\n",
+    "        if val is not \" \": points_visited.append((x,y))\n",
+    "        \n",
+    "        if val.isalpha():\n",
+    "            letters_seen.append(val)\n",
+    "\n",
+    "        if val == \"|\" or val == \"-\" or val.isalpha():\n",
+    "            x, y = step(x,y, direction)\n",
+    "        elif val == \"+\":\n",
+    "            direction = get_direction(x, y, direction, puzzle)\n",
+    "            x, y = step(x,y, direction)\n",
     "        else:\n",
-    "            x += 1\n",
-    "    return x\n",
+    "            print(\"End of the Line\")\n",
+    "            print(\"Letters seen: \", \"\".join(letters_seen))\n",
+    "            print(\"Steps taken: \", len(points_visited)-1)\n",
+    "            print(\"Pos:\", x, y, direction)\n",
+    "            direction = None\n",
     "\n",
-    "go_horizontal(t, x)"
+    "    return \"\".join(letters_seen), len(points_visited)-1\n",
+    "\n",
+    "solve_puzzle()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['|', '|', 'A', '|', '|', '+']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[row[5] for row in test_input]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 0\n",
-      "['|', '|', 'A', '|', '|', '+']\n",
-      "DOWN\n"
+      "End of the Line\n",
+      "Letters seen:  MOABEUCWQS\n",
+      "Steps taken:  18058\n",
+      "Pos: 142 89 RIGHT\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "5"
+       "('MOABEUCWQS', 18058)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def go_vertical(puzzle, x, y):\n",
-    "    \"\"\"goes vertical, returns y position\"\"\"\n",
-    "    col = [row[x] for row in puzzle]\n",
-    "    print(x, y)\n",
-    "    print(col)\n",
-    "    \n",
-    "    if y == 0:\n",
-    "        go = \"DOWN\"\n",
-    "    elif y == len(puzzle):\n",
-    "        go = \"UP\"\n",
-    "    elif col[y-1] != \" \":\n",
-    "        go = \"UP\"\n",
-    "        y -= 1\n",
-    "    else:\n",
-    "        go=\"DOWN\"\n",
-    "        y += 1\n",
-    "    print(go)    \n",
-    "    \n",
-    "    while col[y] != \"+\":\n",
-    "        if go == \"UP\":\n",
-    "            y -= 1\n",
-    "        else:\n",
-    "            y += 1\n",
-    "    \n",
-    "    return y\n",
-    "\n",
-    "go_vertical(test_input, test_input[0].index(\"|\"), 0)"
+    "solve_puzzle(puzzle_input)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Puzzle answer is `MOABEUCWQS`, steps taken is `18058`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": []
