solved day 21 part 1 and 2

--- a/Day 21 - Fractal Art.ipynb
+++ b/Day 21 - Fractal Art.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -130,17 +130,104 @@
        " '##./.../... => ##.#/..../##../##..']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "# the puzzle input\n",
     "with open('puzzle_inputs/day21_input.txt') as f:\n",
     "    data = f.read().strip().split(\"\\n\")\n",
     "puzzle_input = [line for line in data]\n",
     "puzzle_input[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.#.', '..#', '###']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start_pattern = \"\"\".#.\n",
+    "..#\n",
+    "###\"\"\".split(\"\\n\")\n",
+    "start_pattern"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5, 5, 3, 7, 9, 4, 7, 6, 7],\n",
+       "       [3, 5, 4, 4, 6, 0, 5, 2, 7],\n",
+       "       [2, 7, 5, 5, 5, 7, 6, 5, 3],\n",
+       "       [5, 6, 2, 3, 7, 8, 8, 5, 6],\n",
+       "       [6, 0, 4, 8, 4, 2, 9, 9, 6],\n",
+       "       [4, 4, 4, 9, 0, 3, 4, 5, 5],\n",
+       "       [1, 1, 0, 0, 4, 8, 7, 6, 2],\n",
+       "       [6, 3, 1, 1, 6, 1, 7, 2, 3],\n",
+       "       [3, 4, 3, 2, 6, 9, 1, 8, 9]])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "if len(start_pattern) % 3 == 0:\n",
+    "    size = 3\n",
+    "else:\n",
+    "    size = 2\n",
+    "\n",
+    "a = np.random.randint(0,10,size=(9,9))\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5 5 3]\n",
+      " [3 5 4]\n",
+      " [2 7 5]]\n",
+      "[[3 7 8]\n",
+      " [8 4 2]\n",
+      " [9 0 3]]\n",
+      "[[7 6 2]\n",
+      " [7 2 3]\n",
+      " [1 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 0\n",
+    "for i in range(size, len(a)+1, size):\n",
+    "    print(a[s:i,s:i])\n",
+    "    s += size"
    ]
   },
   {
